[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.17"
regex = "1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
indoc = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlElement", "HtmlTextAreaElement"]

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3"
